fix(FieldBlock): remove max label width when width stretch

--- a/packages/dnb-eufemia/src/extensions/forms/FieldBlock/style/dnb-field-block.scss
+++ b/packages/dnb-eufemia/src/extensions/forms/FieldBlock/style/dnb-field-block.scss
@@ -45,6 +45,10 @@ fieldset.dnb-forms-field-block {
   &--width {
     &-stretch {
       flex-grow: 1;
+      .dnb-forms-field-block__label,
+      .dnb-forms-field-block__label.dnb-form-label {
+        max-width: none;
+      }
     }
     @include allAbove(x-small) {
       &-custom {
